--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login & Registration</title>
+    <title>Скедул | Вход</title>
     <link rel="stylesheet" href="css/stylesLoginRegister.css">
     <link rel="icon" href="img/icon.png" type="image/png">
 </head>
